@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -24,17 +24,32 @@
  */
 package co.elastic.apm.attach;
 
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import wiremock.org.apache.commons.codec.digest.DigestUtils;
 
 import java.io.File;
+import java.io.FileOutputStream;
 import java.io.FileReader;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class ElasticApmAttacherTest {
+
+    private List<File> toClean = new ArrayList<>();
+
+    @AfterEach
+    void cleanup() throws IOException {
+        for (File file : toClean) {
+            Files.delete(file.toPath());
+        }
+    }
 
     @Test
     void testHash() throws Exception {
@@ -46,10 +61,46 @@ class ElasticApmAttacherTest {
     void testCreateTempProperties() throws Exception {
         File tempProperties = ElasticApmAttacher.createTempProperties(Map.of("foo", "bär"));
         assertThat(tempProperties).isNotNull();
-        tempProperties.deleteOnExit();
-        Properties properties = new Properties();
-        properties.load(new FileReader(tempProperties));
+
+        toClean.add(tempProperties);
+
+        Properties properties = readProperties(tempProperties);
         assertThat(properties.get("foo")).isEqualTo("bär");
+    }
+
+    @Test
+    void testCreateTempPropertiesWithExternalConfig() throws IOException {
+        Properties externalConfig = new Properties();
+        externalConfig.putAll(Map.of(
+            "foo_ext", "bär_ext",
+            "to_be_overriden", "external"
+        ));
+
+        File externalConfigFile = File.createTempFile("external-config", ".tmp");
+        toClean.add(externalConfigFile);
+        externalConfig.store(new FileOutputStream(externalConfigFile), null);
+
+        Map<String, String> config = Map.of(
+            "foo", "bär",
+            "to_be_overriden", "--config param",
+            "config_file", externalConfigFile.getAbsolutePath());
+
+        File tempProperties = ElasticApmAttacher.createTempProperties(config);
+        toClean.add(tempProperties);
+
+        Properties mergedProperties = readProperties(tempProperties);
+        assertThat(mergedProperties)
+            .containsEntry("foo", "bär")
+            .containsEntry("foo_ext", "bär_ext")
+            .containsEntry("to_be_overriden", "external"); // external properties has higher priority than parameters
 
     }
+
+    private Properties readProperties(File propertyFile) throws IOException {
+        Properties properties = new Properties();
+        properties.load(new FileReader(propertyFile));
+        return properties;
+    }
+
+
 }
